Dynamic rotation of particles not affected by forcefields 2.61 64 bit #29846

Closed
opened 2012-01-09 20:38:38 +01:00 by Alasdair Beckett-King · 7 comments

%%%A particle system with 'Dynamic Rotation' checked is unaffected by a force field with the 'Effect Point: Rotation' checked.

Checking 'Effect Point: Location' causes the particles to move. Un-checking 'Dynamic Rotation' and checking 'Effect Point: Location' causes the particles to move and rotate accordingly, irrespective of whether 'Effect Point: Rotation' is checked.

Checking and un-checking 'Dynamic Rotation' during particle animation seems to cause existing particles to rotate dynamically, but newly emitted particles do not rotate.

Windows 7 Home Premium 64 bit
Nvidia Geforce 9500 GT

Tested in Blender 2.61 64 bit and 2.57b 32 bit

Confirmed by another user in this thread:
http://blenderartists.org/forum/showthread.php?241979-Is-dynamic-rotation-working-in-2.6x%%%

%%%A particle system with 'Dynamic Rotation' checked is unaffected by a force field with the 'Effect Point: Rotation' checked. Checking 'Effect Point: Location' causes the particles to move. Un-checking 'Dynamic Rotation' and checking 'Effect Point: Location' causes the particles to move and rotate accordingly, irrespective of whether 'Effect Point: Rotation' is checked. Checking and un-checking 'Dynamic Rotation' during particle animation seems to cause existing particles to rotate dynamically, but newly emitted particles do not rotate. Windows 7 Home Premium 64 bit Nvidia Geforce 9500 GT Tested in Blender 2.61 64 bit and 2.57b 32 bit Confirmed by another user in this thread: http://blenderartists.org/forum/showthread.php?241979-Is-dynamic-rotation-working-in-2.6x%%%

Changed status to: 'Open'

Changed status to: 'Open'
%%%Closed duplicate report: http://projects.blender.org/tracker/index.php?func=detail&aid=30077&group_id=9&atid=498%%%

%%%Patch uploaded to attachments. Please review and in case of problems contact me.%%%

%%%Patch uploaded to attachments. Please review and in case of problems contact me.%%%

%%%Sorry I forgot to delete a part of the patch which belongs to another patch. I uploaded a corrected version.%%%

%%%Sorry I forgot to delete a part of the patch which belongs to another patch. I uploaded a corrected version.%%%
Member

%%%Committed the fix to SVN, with a minor modification to ensure the epoint->ave vector is correctly initialized.%%%

%%%Committed the fix to SVN, with a minor modification to ensure the epoint->ave vector is correctly initialized.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Lukas do you remember the commit #?%%%

%%%Lukas do you remember the commit #?%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29846
No description provided.