Fix #29846, Dynamic rotation of particles not affected by forcefields 2.61 64 bit. Patch by Arno Mayrhofer (azrael3000).

Minor fix by me to initialize the effector point angular velocity vector correctly.